crates/core/tests/snapshots/container_env_test__container_env__skips_unnamed_settings_for_prefix.snap
---
source: crates/core/tests/container_env_test.rs
expression: pretty(container.impl_partial_env_values())
---
fn env_values_with_prefix(
    prefix: Option<&str>,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    use schematic::internal::*;
    let mut env = EnvManager::new(prefix, Some("PREFIX_"));
    let mut partial = Self::default();
    partial.1 = env.get("B_VAR")?;
    Ok(if env.is_empty() { None } else { Some(partial) })
}
